--- a/vignettes/Rcpp-sugar.Rmd
+++ b/vignettes/Rcpp-sugar.Rmd
@@ -1,73 +1,90 @@
-% !Rnw driver = highlight::HighlightWeaveLatex()
-\documentclass[10pt]{article}
-%\VignetteIndexEntry{Rcpp-sugar}
-%\VignetteEngine{highlight::highlight}
-%\VignetteKeywords{Rcpp, syntactic sugar}
-%\VignetteDepends{Rcpp}
+---
+title: |
+       | \pkg{Rcpp} syntactic sugar
 
-\usepackage[USletter]{vmargin}
-\setmargrb{0.75in}{0.75in}{0.75in}{0.75in}
+# Use letters for affiliations
+author:
+  - name: Dirk Eddelbuettel
+    affiliation: a
+  - name: Romain Francois
+    affiliation: a
 
-\usepackage{color, alltt}
-\usepackage[authoryear,round,longnamesfirst]{natbib}
-\usepackage[colorlinks]{hyperref}
-\definecolor{link}{rgb}{0,0,0.3}	%% next few lines courtesy of RJournal.sty
-\hypersetup{
-    colorlinks,%
-    citecolor=link,%
-    filecolor=link,%
-    linkcolor=link,%
-    urlcolor=link
-}
+address:
+  - code: a
+    address: \url{http://dirk.eddelbuettel.com}
+  - code: b
+    address: \url{https://romain.rbind.io/}
 
-\usepackage{microtype}                     %% cf http://www.khirevich.com/latex/microtype/
-\usepackage[T1]{fontenc}		   %% cf http://www.khirevich.com/latex/font/
-\usepackage[bitstream-charter]{mathdesign} %% cf http://www.khirevich.com/latex/font/
+# For footer text
+lead_author_surname: Eddelbuettel and Francois
 
-\newcommand{\proglang}[1]{\textsf{#1}}
-\newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
-\newcommand{\sugar}{\textsl{Rcpp sugar}}
-\newcommand{\ith}{\textsl{i}-\textsuperscript{th}}
-\newcommand{\code}[1]{\texttt{#1}}
+# Place DOI URL or CRAN Package URL here
+doi: "https://cran.r-project.org/package=Rcpp"
 
-
-%% This corresponds to setting boxes=TRUE for highlight
-\newsavebox{\hlbox}
-\definecolor{hlBg}{rgb}{0.949019607843137,0.949019607843137,0.949019607843137}
-\definecolor{hlBd}{rgb}{0.9,0.9,0.9} % border
-\renewenvironment{Hchunk}{\vspace{0.5em}\noindent\begin{lrbox}{\hlbox}\begin{minipage}[b]{.9\textwidth}}%
-    {\end{minipage}\end{lrbox}\fcolorbox{hlBd}{hlBg}{\usebox{\hlbox}}\vspace{0.5em}}
-
-
-<<echo=FALSE,print=FALSE>>=
-prettyVersion <- packageDescription("Rcpp")$Version
-prettyDate <- format(Sys.Date(), "%B %e, %Y")
-@
-
-\author{Dirk Eddelbuettel \and Romain Fran\c{c}ois}
-\title{\pkg{Rcpp} syntactic sugar}
-\date{\pkg{Rcpp} version \Sexpr{prettyVersion} as of \Sexpr{prettyDate}}
-
-\begin{document}
-\maketitle
-
-\abstract{
-  \noindent
-  This note describes \sugar~which has been introduced in
-  version 0.8.3 of \pkg{Rcpp} \citep{CRAN:Rcpp,JSS:Rcpp}. \sugar~
+# Abstract
+abstract: |
+  This note describes \sugar which has been introduced in
+  version 0.8.3 of \pkg{Rcpp} \citep{CRAN:Rcpp,JSS:Rcpp}. \sugar 
   brings a higher-level of abstraction to \proglang{C++} code
   written using the \pkg{Rcpp} API.
 
-  \sugar~is based on expression templates
+  \sugar is based on expression templates
   \citep{Abrahams+Gurtovoy:2004:TemplateMetaprogramming,Vandevoorde+Josuttis:2003:Templates} and provides
   some 'syntactic sugar' facilities directly in \pkg{Rcpp}. This is similar
   to how \pkg{RcppArmadillo} \citep{CRAN:RcppArmadillo} offers
   linear algebra \proglang{C++} classes based on \pkg{Armadillo}
   \citep{Sanderson:2010:Armadillo}.
-  % TODO: reference to armadillo, blitz, etc ...
-}
 
-\section{Motivation}
+# Optional: Acknowledgements
+# acknowledgements: |
+
+# Optional: One or more keywords
+keywords:
+  - Rcpp
+  - sugar
+  - r
+  - cpp
+
+# Font size of the document, values of 9pt (default), 10pt, 11pt and 12pt
+fontsize: 9pt
+
+# Optional: Force one-column layout, default is two-column
+#one_column: true
+
+# Optional: Enables lineo mode, but only if one_column mode is also true
+#lineno: true
+
+# Optional: Enable one-sided layout, default is two-sided
+#one_sided: true
+
+# Optional: Bibliography
+bibliography: '`r Rcpp:::bib()`.bib'
+
+# Optional: Enable a 'Draft' watermark on the document
+#watermark: false
+
+# Customize footer, eg by referencing the vignette
+footer_contents: "Rcpp Vignette"
+
+# Our style
+output: pinp::pinp
+
+header-includes:
+  \newcommand{\proglang}[1]{\textsf{#1}}
+  \newcommand{\pkg}[1]{\textbf{#1}}
+  \newcommand{\faq}[1]{FAQ~\ref{#1}}
+  \newcommand{\rdoc}[2]{\href{http://www.rdocumentation.org/packages/#1/functions/#2}{\code{#2}}}
+  \newcommand{\sugar}{\textsl{Rcpp sugar}~}
+  \newcommand{\ith}{\textsl{i}-\textsuperscript{th}}
+
+vignette: >
+  %\VignetteIndexEntry{Rcpp-sugar}
+  %\VignetteKeywords{Rcpp, sugar, r, cpp}
+  %\VignettePackage{Rcpp}
+  %\VignetteEngine{knitr::rmarkdown}
+---
+
+# Motivation
 
 \pkg{Rcpp} facilitates development of internal compiled code in an \proglang{R}
 package by abstracting low-level details of the \proglang{R} API \citep{R:Extensions}
@@ -75,10 +92,10 @@ into a consistent set of \proglang{C++} classes.
 
 Code written using \pkg{Rcpp} classes is easier to read, write and maintain,
 without loosing performance. Consider the following code example which
-provides a function \texttt{foo} as a \proglang{C++} extension to
+provides a function `foo` as a \proglang{C++} extension to
 \proglang{R} by using the \pkg{Rcpp} API:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 RcppExport SEXP foo( SEXP x, SEXP y){
     Rcpp::NumericVector xx(x), yy(y) ;
     int n = xx.size() ;
@@ -95,53 +112,53 @@ RcppExport SEXP foo( SEXP x, SEXP y){
     }
     return res ;
 }
-@
+```
 
-The goal of the function \texttt{foo} code is simple. Given two
-\texttt{numeric} vectors, we create a third one. This is typical low-level
+The goal of the function `foo` code is simple. Given two
+`numeric` vectors, we create a third one. This is typical low-level
 \proglang{C++} code that that could be written much more consicely in
 \proglang{R} thanks to vectorisation as shown in the next example.
 
-<<eval=FALSE>>=
+```{r, eval = FALSE}
 foo <- function(x, y){
     ifelse( x < y, x*x, -(y*y) )
 }
-@
+```
 
-Put succinctly, the motivation of \sugar~is to bring a subset of the
+Put succinctly, the motivation of \sugar is to bring a subset of the
 high-level \proglang{R} syntax in \proglang{C++}. Hence, with \sugar, the
-\proglang{C++} version of \texttt{foo} now becomes:
+\proglang{C++} version of `foo` now becomes:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 RcppExport SEXP foo( SEXP xs, SEXP ys){
     Rcpp::NumericVector x(xs) ;
     Rcpp::NumericVector y(ys) ;
     return Rcpp::wrap( ifelse( x < y, x*x, -(y*y) )) ;
 }
-@
+```
 
 Apart from the fact that we need to assign the two objects we obtain from
 \proglang{R}---which is a simple statement each thanks to the template magic
-in \pkg{Rcpp}---and the need for explicit \texttt{return} and
-\texttt{Rcpp::wrap} statements, the code is now identical between
+in \pkg{Rcpp}---and the need for explicit `return` and
+`Rcpp::wrap` statements, the code is now identical between
 highly-vectorised \proglang{R} and \proglang{C++}.
 
-\sugar~is written using expression templates and lazy evaluation techniques
+\sugar is written using expression templates and lazy evaluation techniques
 \citep{Abrahams+Gurtovoy:2004:TemplateMetaprogramming,Vandevoorde+Josuttis:2003:Templates}.
 This not only allows a much nicer high-level syntax, but also makes it
-rather efficient (as we detail in section~\ref{sec:performance} below).
+rather efficient (as we detail in section \ref{sec:performance} below).
 
-\section{Operators}
+# Operators
 
-\sugar~takes advantage of \proglang{C++} operator overloading. The next few
+\sugar takes advantage of \proglang{C++} operator overloading. The next few
 sections discuss several examples.
 
-\subsection{Binary arithmetic operators}
+## Binary arithmetic operators
 
-\sugar~defines the usual binary arithmetic operators : \texttt{+}, \texttt{-},
-\texttt{*}, \texttt{/}.
+\sugar defines the usual binary arithmetic operators : `+`, `-`,
+`*`, `/`.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // two numeric vectors of the same size
 NumericVector x ;
 NumericVector y ;
@@ -162,23 +179,23 @@ NumericVector res = 2.0 / y;
 NumericVector res = x * y + y / 2.0 ;
 NumericVector res = x * ( y - 2.0 ) ;
 NumericVector res = x / ( y * y ) ;
-@
+```
 
 The left hand side (lhs) and the right hand side (rhs) of each binary
 arithmetic expression must be of the same type (for example they should be both
-\texttt{numeric} expressions).
+`numeric` expressions).
 
 The lhs and the rhs can either have the same size or one of them could
 be a primitive value of the appropriate type, for example adding a
-\texttt{NumericVector} and a \texttt{double}.
+`NumericVector` and a `double`.
 
-\subsection{Binary logical operators}
+## Binary logical operators
 
-Binary logical operators create a \texttt{logical} sugar expression
+Binary logical operators create a `logical` sugar expression
 from either two sugar expressions of the same type or one sugar expression
 and a primitive value of the associated type.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // two integer vectors of the same size
 NumericVector x ;
 NumericVector y ;
@@ -201,14 +218,14 @@ LogicalVector res = 2 != y;
 LogicalVector res = ( x + y ) <  ( x*x ) ;
 LogicalVector res = ( x + y ) >= ( x*x ) ;
 LogicalVector res = ( x + y ) == ( x*x ) ;
-@
+```
 
-\subsection{Unary operators}
+## Unary operators
 
-The unary \texttt{operator-} can be used to negate a (numeric) sugar expression.
-whereas the unary \texttt{operator!} negates a logical sugar expression:
+The unary `operator-` can be used to negate a (numeric) sugar expression.
+whereas the unary `operator!` negates a logical sugar expression:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // a numeric vector
 NumericVector x ;
 
@@ -224,47 +241,47 @@ NumericVector z ;
 
 // negate the logical expression "y < z"
 LogicalVector res = ! ( y < z );
-@
+```
 
-\section{Functions}
+# Functions
 
-\sugar~defines functions that closely match the behavior of \proglang{R}
+\sugar defines functions that closely match the behavior of \proglang{R}
 functions of the same name.
 
-\subsection{Functions producing a single logical result}
+## Functions producing a single logical result
 
-Given a logical sugar expression, the \texttt{all} function identifies if all
-the elements are \texttt{TRUE}. Similarly, the \texttt{any} function
-identifies if any the element is \texttt{TRUE} when
+Given a logical sugar expression, the `all` function identifies if all
+the elements are `TRUE`. Similarly, the `any` function
+identifies if any the element is `TRUE` when
 given a logical sugar expression.
 
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector x = seq_len( 1000 ) ;
 all( x*x < 3 ) ;
 any( x*x < 3 ) ;
-@
+```
 
-Either call to \texttt{all} and \texttt{any} creates an object of a class
-that has member functions \texttt{is\_true}, \texttt{is\_false},
-\texttt{is\_na} and a conversion to \texttt{SEXP} operator.
+Either call to `all` and `any` creates an object of a class
+that has member functions `is_true`, `is_false`,
+`is_na` and a conversion to `SEXP` operator.
 
-One important thing to highlight is that \texttt{all} is lazy. Unlike
+One important thing to highlight is that `all` is lazy. Unlike
 \proglang{R}, there is no need to fully evaluate the expression. In the
-example above, the result of \texttt{all} is fully resolved after evaluating
-only the two first indices of the expression \verb|x * x < 3|. \texttt{any}
+example above, the result of `all` is fully resolved after evaluating
+only the two first indices of the expression \verb|x * x < 3|. `any`
 is lazy too, so it will only need to resolve the first element of the example
 above.
 
-%\subsubsection{Conversion to bool}
+%### Conversion to bool
 
-One important thing to note concernc the conversion to the \texttt{bool}
-type. In order to respect the concept of missing values (\texttt{NA}) in
-\proglang{R}, expressions generated by \texttt{any} or \texttt{all} can not
-be converted to \texttt{bool}. Instead one must use \texttt{is\_true},
-\texttt{is\_false} or \texttt{is\_na}:
+One important thing to note concernc the conversion to the `bool`
+type. In order to respect the concept of missing values (`NA`) in
+\proglang{R}, expressions generated by `any` or `all` can not
+be converted to `bool`. Instead one must use `is_true`,
+`is_false` or `is_na`:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // wrong: will generate a compile error
 bool res = any( x < y) ) ;
 
@@ -272,68 +289,68 @@ bool res = any( x < y) ) ;
 bool res = is_true( any( x < y ) )
 bool res = is_false( any( x < y ) )
 bool res = is_na( any( x < y ) )
-@
+```
 
 % FIXME this may need some expanding the trivariate bool and how to use it
 
 
-\subsection{Functions producing sugar expressions}
+## Functions producing sugar expressions
 
-\subsubsection{is\_na}
+### is_na
 
 Given a sugar expression of any type, \verb|is_na| (just like the other
 functions in this section) produces a logical sugar expression of the same
-length. Each element of the result expression evaluates to \texttt{TRUE} if
-the corresponding input is a missing value, or \texttt{FALSE} otherwise.
+length. Each element of the result expression evaluates to `TRUE` if
+the corresponding input is a missing value, or `FALSE` otherwise.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector x = IntegerVector::create( 0, 1, NA_INTEGER, 3 ) ;
 
 is_na( x )
 all( is_na( x ) )
 any( ! is_na( x ) )
-@
+```
 
-\subsubsection{seq\_along}
+### seq_along
 
-Given a sugar expression of any type, \texttt{seq\_along} creates an
+Given a sugar expression of any type, `seq_along` creates an
 integer sugar expression whose values go from 1 to the size of the input.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector x = IntegerVector::create( 0, 1, NA_INTEGER, 3 ) ;
 
 seq_along( x )
 seq_along( x * x * x * x * x * x * x )
-@
+```
 
-This is the most lazy function, as it only needs to call the \texttt{size}
+This is the most lazy function, as it only needs to call the `size`
 member function of the input expression. The input expression need not to be
 resolved. The two examples above gives the same result with the same efficiency
 at runtime. The compile time will be affected by the complexity of the
 second expression, since the abstract syntax tree is built at compile time.
 
-\subsubsection{seq\_len}
+### seq_len
 
-\texttt{seq\_len} creates an integer sugar expression whose \ith\
-element expands to \texttt{i}. \texttt{seq\_len} is particularly useful in
-conjunction with \texttt{sapply} and \texttt{lapply}.
+`seq_len` creates an integer sugar expression whose \ith\
+element expands to `i`. `seq_len` is particularly useful in
+conjunction with `sapply` and `lapply`.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // 1, 2, ..., 10
 IntegerVector x = seq_len( 10 ) ;
 
 lapply( seq_len(10), seq_len )
-@
+```
 
-\subsubsection{pmin and pmax}
+### pmin and pmax
 
 Given two sugar expressions of the same type and size, or one expression and
-one primitive value of the appropriate type, \texttt{pmin} (\texttt{pmax})
+one primitive value of the appropriate type, `pmin` (`pmax`)
 generates a sugar expression of the same type whose \ith\ element expands to
 the lowest (highest) value between the \ith\ element of the first expression
 and the \ith element of the second expression.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector x = seq_len( 10 ) ;
 
 pmin( x, x*x )
@@ -341,33 +358,33 @@ pmin( x*x, 2 )
 
 pmin( x, x*x )
 pmin( x*x, 2 )
-@
+```
 
-\subsubsection{ifelse}
+### ifelse
 
 Given a logical sugar expression and either :
 \begin{itemize}
 \item two compatible sugar expression (same type, same size)
 \item one sugar expression and one compatible primitive
 \end{itemize}
-\texttt{ifelse} expands to a sugar expression whose \ith\
+`ifelse` expands to a sugar expression whose \ith\
 element is the \ith\ element of the first expression
-if the \ith\ element of the condition expands to \texttt{TRUE}
+if the \ith\ element of the condition expands to `TRUE`
 or the \ith\ of the second expression if
-the \ith\ element of the condition expands to \texttt{FALSE},
+the \ith\ element of the condition expands to `FALSE`,
 or the appropriate missing value otherwise.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector x ;
 IntegerVector y ;
 
 ifelse( x < y, x, (x+y)*y )
 ifelse( x > y, x, 2 )
-@
+```
 
-\subsubsection{sapply}
+### sapply
 
-\texttt{sapply} applies a \proglang{C++} function to each element
+`sapply` applies a \proglang{C++} function to each element
 of the given expression to create a new expression. The type of the
 resulting expression is deduced by the compiler from the result type of
 the function.
@@ -375,18 +392,18 @@ the function.
 The function can be a free \proglang{C++} function such as the overload
 generated by the template function below:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 template <typename T>
 T square( const T& x){
     return x * x ;
 }
 sapply( seq_len(10), square<int> ) ;
-@
+```
 
 Alternatively, the function can be a functor whose type has a nested type
-called \texttt{result\_type}
+called `result_type`
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 template <typename T>
 struct square : std::unary_function<T,T> {
     T operator()(const T& x){
@@ -394,47 +411,47 @@ struct square : std::unary_function<T,T> {
     }
 }
 sapply( seq_len(10), square<int>() ) ;
-@
+```
 
-\subsubsection{lapply}
+### lapply
 
-\texttt{lapply} is similar to \texttt{sapply} except that the result is
-allways an list expression (an expression of type \texttt{VECSXP}).
+`lapply` is similar to `sapply` except that the result is
+allways an list expression (an expression of type `VECSXP`).
 
-\subsubsection{sign}
+### sign
 
-Given a numeric or integer expression, \texttt{sign} expands to an expression
-whose values are one of 1, 0, -1 or \texttt{NA}, depending on the sign
+Given a numeric or integer expression, `sign` expands to an expression
+whose values are one of 1, 0, -1 or `NA`, depending on the sign
 of the input expression.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector xx;
 
 sign( xx )
 sign( xx * xx )
-@
+```
 
-\subsubsection{diff}
+### diff
 
-The \ith\ element of the result of \texttt{diff} is
-the difference between the $(i+1)$\textsuperscript{th} and the
+The \ith\ element of the result of `diff` is
+the difference between the $(i+1)^{\text{th}}$ and the
 \ith\ element of the input expression. Supported types are
 integer and numeric.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector xx;
 
 diff( xx )
-@
+```
 
-\subsection{Mathematical functions}
+## Mathematical functions
 
 For the following set of functions, generally speaking, the \ith\ element of
-the result of the given function (say, \texttt{abs}) is the result of
+the result of the given function (say, `abs`) is the result of
 applying that function to this \ith\ element of the input expression.
 Supported types are integer and numeric.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 IntegerVector x;
 
 abs( x )
@@ -442,11 +459,11 @@ exp( x )
 floor( x )
 ceil( x )
 pow(x, z)     # x to the power of z
-@
+```
 
 % log() and log10() maybe?  Or ln() ?
 
-\subsection{The d/q/p/r statistical functions}
+## The d/q/p/r statistical functions
 
 The framework provided by \sugar also permits easy and efficient access the
 density, distribution function, quantile and random number generation
@@ -456,16 +473,16 @@ Currently, most of these functions are vectorised for the first element which
 denote size. Consequently, these calls works in \proglang{C++} just as they
 would in \proglang{R}:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 x1 = dnorm(y1, 0, 1);  // density of y1 at m=0, sd=1
 x2 = qnorm(y2, 0, 1);  // quantiles of y2
 x3 = pnorm(y3, 0, 1);  // distribution function of y3
 x4 = rnorm(n, 0, 1);   // 'n' RNG draws of N(0, 1)
-@
+```
 
 Similar d/q/p/r functions are provided for the most common distributions:
 beta, binom, cauchy, chisq, exp, f, gamma, geom, hyper, lnorm, logis, nbeta,
-nbinom, nbinom\_mu, nchisq, nf, norm, nt, pois, t, unif, and weibull.
+nbinom, nbinom_mu, nchisq, nf, norm, nt, pois, t, unif, and weibull.
 
 Note that the parameterization used in these sugar functions may differ between
 the top-level functions exposed in an \proglang{R} session. For example, 
@@ -481,13 +498,13 @@ initialize the state of the random number generator as detailed in Section
 the random number generatator on entry to a block and resets it on exit. We
 offer the \code{RNGScope} class which allows code such as
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 RcppExport SEXP getRGamma() {
     RNGScope scope;
     NumericVector x = rgamma( 10, 1, 1 );
     return x;
 }
-@
+```
 
 As there is some computational overhead involved in using \code{RNGScope}, we
 are not wrapping it around each inner function.  Rather, the user of these
@@ -495,30 +512,30 @@ functions (\textsl{i.e.} you) should place an \code{RNGScope} at the
 appropriate level of your code.
 
 
-\section{Performance}
+# Performance
 \label{sec:performance}
 
 TBD
 
-\section{Implementation}
+# Implementation
 
 This section details some of the techniques used in the implementation of
 \sugar. Note that the user need not to be familiar with the implementation
 details in order to use \sugar, so this section can be skipped upon a first
 read of the paper.
 
-Writing \sugar~functions is fairly repetitive and follows a well-structured
+Writing \sugar functions is fairly repetitive and follows a well-structured
 pattern. So once the basic concepts are mastered (which may take time given
 the inherent complexities in template programming), it should be possible to
 extend the set of function further following the established pattern..
 
-\subsection{The curiously recurring template pattern}
+## The curiously recurring template pattern
 
-Expression templates such as those used by \sugar~use a technique
-called the \emph{Curiously Recurring Template Pattern} (CRTP). The general
+Expression templates such as those used by \sugar use a technique
+called the _Curiously Recurring Template Pattern_ (CRTP). The general
 form of CRTP is:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 // The Curiously Recurring Template Pattern (CRTP)
 template <typename T>
 struct base {
@@ -527,21 +544,21 @@ struct base {
 struct derived : base<derived> {
     // ...
 };
-@
+```
 
-The \texttt{base} class is templated by the class that derives from it :
-\texttt{derived}. This shifts the relationship between a base class and a
+The `base` class is templated by the class that derives from it :
+`derived`. This shifts the relationship between a base class and a
 derived class as it allows the base class to access methods of the derived
 class.
 
-\subsection{The VectorBase class}
+## The VectorBase class
 
-The CRTP is used as the basis for \sugar~with the \texttt{VectorBase}
+The CRTP is used as the basis for \sugar with the `VectorBase`
 class template. All sugar expression derive from one class generated by the
-\texttt{VectorBase} template. The current definition of \texttt{VectorBase}
+`VectorBase` template. The current definition of `VectorBase`
 is given here:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 template <int RTYPE, bool na, typename VECTOR>
 class VectorBase {
 public:
@@ -565,37 +582,35 @@ public:
     inline iterator begin() const { return iterator(*this, 0) ; }
     inline iterator end() const { return iterator(*this, size() ) ; }
 }
-@
+```
 
-The \texttt{VectorBase} template has three parameters:
+The `VectorBase` template has three parameters:
 
-\begin{itemize}
-\item \texttt{RTYPE}: This controls the type of expression (INTSXP, REALSXP,
-  ...)
-\item \texttt{na}: This embeds in the derived type information about whether
+
+- `RTYPE`: This controls the type of expression (INTSXP, REALSXP, ...)
+- `na`: This embeds in the derived type information about whether
   instances may contain missing values. \pkg{Rcpp} vector types
-  (\texttt{IntegerVector}, ...)  derive from \texttt{VectorBase} with this
-  parameter set to \texttt{true} because there is no way to know at
+  (`IntegerVector`, ...)  derive from `VectorBase` with this
+  parameter set to `true` because there is no way to know at
   compile-time if the vector will contain missing values at run-time.
-  However, this parameter is set to \texttt{false} for types that are
+  However, this parameter is set to `false` for types that are
   generated by sugar expressions as these are guaranteed to produce
   expressions that are without missing values. An example is the
-  \texttt{is\_na} function. This parameter is used in several places as part
+  `is_na` function. This parameter is used in several places as part
   of the compile time dispatch to limit the occurence of redundant
   operations.
-\item \texttt{VECTOR}: This parameter is the key of \sugar. This is the
-  manifestation of CRTP. The indexing operator and the \texttt{size} method
-  of \texttt{VectorBase} use a static cast of \texttt{this} to the
-  \texttt{VECTOR} type to forward calls to the actual method of the derived
+- `VECTOR`: This parameter is the key of \sugar. This is the
+  manifestation of CRTP. The indexing operator and the `size` method
+  of `VectorBase` use a static cast of `this` to the
+  `VECTOR` type to forward calls to the actual method of the derived
   class.
-\end{itemize}
 
-\subsection{Example : sapply}
+## Example: sapply
 
-As an example, the current implementation of \texttt{sapply}, supported by
-the template class \texttt{Rcpp::sugar::Sapply} is given below:
+As an example, the current implementation of `sapply`, supported by
+the template class `Rcpp::sugar::Sapply` is given below:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 template <int RTYPE, bool NA, typename T, typename Function>
 class Sapply : public VectorBase<
     Rcpp::traits::r_sexptype_traits<
@@ -632,35 +647,35 @@ inline sugar::Sapply<RTYPE,_NA_,T,Function>
 sapply( const Rcpp::VectorBase<RTYPE,_NA_,T>& t, Function fun ){
     return sugar::Sapply<RTYPE,_NA_,T,Function>( t, fun ) ;
 }
-@
+```
 
-\subsubsection{The sapply function}
+### The sapply function
 
-\texttt{sapply} is a template function that takes two arguments.
+`sapply` is a template function that takes two arguments.
 \begin{itemize}
 \item The first argument
 is a sugar expression, which we recognize because of the relationship with
-the \texttt{VectorBase} class template.
+the `VectorBase` class template.
 \item The second argument is the function to apply.
 \end{itemize}
 
-The \texttt{sapply} function itself does not do anything, it is just used
+The `sapply` function itself does not do anything, it is just used
 to trigger compiler detection of the template parameters that will be used
-in the \texttt{sugar::Sapply} template.
+in the `sugar::Sapply` template.
 
-\subsubsection{Detection of return type of the function}
+### Detection of return type of the function
 
-In order to decide which kind of expression is built, the \texttt{Sapply}
-template class queries the template argument via the \texttt{Rcpp::traits::result\_of}
+In order to decide which kind of expression is built, the `Sapply`
+template class queries the template argument via the `Rcpp::traits::result_of`
 template.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 typedef typename ::Rcpp::traits::result_of<Function>::type result_type ;
-@
+```
 
-The \texttt{result\_of} type trait is implemented as such:
+The `result_of` type trait is implemented as such:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 template <typename T>
 struct result_of{
     typedef typename T::result_type type ;
@@ -670,61 +685,61 @@ template <typename RESULT_TYPE, typename INPUT_TYPE>
 struct result_of< RESULT_TYPE (*)(INPUT_TYPE) >{
     typedef RESULT_TYPE type ;
 } ;
-@
+```
 
-The generic definition of \texttt{result\_of} targets functors
-with a nested \texttt{result\_type} type.
+The generic definition of `result_of` targets functors
+with a nested `result_type` type.
 
 The second definition is a partial specialization targetting
 function pointers.
 
-\subsubsection{Indentification of expression type}
+### Indentification of expression type
 
-Based on the result type of the function, the \texttt{r\_sexptype\_traits}
+Based on the result type of the function, the `r_sexptype_traits`
 trait is used to identify the expression type.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 const static int RESULT_R_TYPE =
     Rcpp::traits::r_sexptype_traits<result_type>::rtype ;
-@
+```
 
-\subsubsection{Converter}
+### Converter
 
-The \texttt{r\_vector\_element\_converter} class is used to convert an
+The `r_vector_element_converter` class is used to convert an
 object of the function's result type to the actual storage type suitable
 for the sugar expression.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 typedef typename Rcpp::traits::r_vector_element_converter<RESULT_R_TYPE>::type
     converter_type ;
 
-@
+```
 
-\subsubsection{Storage type}
+### Storage type
 
-The \texttt{storage\_type} trait is used to get access to the storage type
+The `storage_type` trait is used to get access to the storage type
 associated with a sugar expression type. For example, the storage type
-of a \texttt{REALSXP} expression is \texttt{double}.
+of a `REALSXP` expression is `double`.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 typedef typename Rcpp::traits::storage_type<RESULT_R_TYPE>::type STORAGE ;
-@
+```
 
-\subsubsection{Input expression base type}
+### Input expression base type
 
-The input expression --- the expression over which \texttt{sapply} runs --- is
+The input expression --- the expression over which `sapply` runs --- is
 also typedef'ed for convenience:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 typedef Rcpp::VectorBase<RTYPE,NA,T> VEC ;
-@
+```
 
-\subsubsection{Output expression base type}
+### Output expression base type
 
-In order to be part of the \sugar~system, the type generated by the
-\texttt{Sapply} class template must inherit from \texttt{VectorBase}.
+In order to be part of the \sugar system, the type generated by the
+`Sapply` class template must inherit from `VectorBase`.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 template <int RTYPE, bool NA, typename T, typename Function>
 class Sapply : public VectorBase<
     Rcpp::traits::r_sexptype_traits<
@@ -733,47 +748,41 @@ class Sapply : public VectorBase<
     true ,
     Sapply<RTYPE,NA,T,Function>
 >
-@
+```
 
-The expression built by \texttt{Sapply} depends on the result type
+The expression built by `Sapply` depends on the result type
 of the function, may contain missing values, and the third argument
-is the manifestation of the \emph{CRTP}.
+is the manifestation of the _CRTP_.
 
-\subsubsection{Constructor}
+### Constructor
 
-The constructor of the \texttt{Sapply} class template is straightforward, it
+The constructor of the `Sapply` class template is straightforward, it
 simply consists of holding the reference to the input expression and the
 function.
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 Sapply( const VEC& vec_, Function fun_ ) : vec(vec_), fun(fun_){}
 
 private:
     const VEC& vec ;
     Function fun ;
-@
+```
 
-\subsubsection{Implementation}
+### Implementation
 
-The indexing operator and the \texttt{size} member function is what
-the \texttt{VectorBase} expects. The size of the result expression is
-the same as the size of the input expression and the i\textsuperscript{th}
+The indexing operator and the `size` member function is what
+the `VectorBase` expects. The size of the result expression is
+the same as the size of the input expression and the $i^{\text{th}}$
 element of the result is simply retrieved by applying the function
 and the converter. Both these methods are inline to maximize performance:
 
-<<lang=cpp>>=
+```{Rcpp, eval = FALSE}
 inline STORAGE operator[]( int i ) const {
 	return converter_type::get( fun( vec[i] ) );
 }
 inline int size() const { return vec.size() ; }
-@
+```
 
-\section{Summary}
+# Summary
 
 TBD
-
-\bibliographystyle{plainnat}
-\bibliography{\Sexpr{Rcpp:::bib()}}
-
-\end{document}
-
